<resources>
    <string name="app_name">Bowler\'s Essentials</string>
    <string name="about_app">About app</string>
    <string name="action_settings">Settings</string>
    <string name="amount_average">Average amount of:</string>
    <string name="amount_tournaments">Amount of games:</string>
    <string name="backup">Backup</string>
    <string name="best_score">Best score:</string>
    <string name="bowling_alley">Bowling alley</string>
    <string name="brak_statystyk">Currently there are no charts - you need at least one score!</string>
    <string name="brak_statystyk_sezon">Currently there are no charts - you need at least one score in current season! (to see all, change settings)</string>
    <string name="brak_wykresow">Currently there are no graphs - you need at least two scores!</string>
    <string name="brak_wynikow">Currently there are no scores. In order to add yours, press the button in right bottom corner.</string>
    <string name="charts">Graphs</string>
    <string name="choose_player">Choose player</string>
    <string name="created">Created:</string>
    <string name="date">date</string>
    <string name="db_opened">Loaded the database.</string>
    <string name="db_saved_to">Saved the database to:</string>
    <string name="debug_delete_scores">DEBUG - delete scores</string>
    <string name="debug_random">DEBUG - random</string>
    <string name="delete">Delete</string>
    <string name="delete_sure">Are sure you want to delete?</string>
    <string name="dialog_return">Are you sure you want to return without saving?</string>
    <string name="dismiss">Dismiss</string>
    <string name="donate">Donations are appreciated:</string>
    <string name="error_data">You need to set a date!</string>
    <string name="error_field">You need to fill in this field!</string>
    <string name="error_saving">An error occured during saving!</string>
    <string name="full_name">Full name</string>
    <string name="github_url"><a href="https://github.com/asdfMaciej/niezbednik-kreglarza">Github - Source code</a></string>
    <string name="include_lanes">Include lanes</string>
    <string name="intro_desc1">In other words, an irreplaceable application for nine-pin bowling fans.</string>
    <string name="intro_desc2">Go into settings and fill in the fields.</string>
    <string name="intro_desc3">Press the image on statistics\' page in order to pick a desired photo.</string>
    <string name="intro_desc4">Add your scores to the application.</string>
    <string name="intro_desc5">From this moment onwards, you\'ll have access to generated charts for each added player.</string>
    <string name="intro_title2">Set personal information</string>
    <string name="intro_title3">Change the picture</string>
    <string name="intro_title4">Add your scores</string>
    <string name="intro_title5">Enjoy new statistics</string>
    <string name="lane_1">Lane 1</string>
    <string name="lane_2">Lane 2</string>
    <string name="lane_3">Lane 3</string>
    <string name="lane_4">Lane 4</string>
    <string name="load">Load</string>
    <string name="maciej_olczyk">Maciej Olczyk</string>
    <string name="maciej_olczyk_for">For meaningful criticism and testing the app</string>
    <string name="modify_result">Change</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="norm_collected">Collected norm</string>
    <string name="norm_collected_ex">Collected norm - for ex. 150</string>
    <string name="norm_display">Display the norm</string>
    <string name="norm_full">Full norm</string>
    <string name="norm_full_ex">Full norm - for ex. 360</string>
    <string name="norm_score">Score norm</string>
    <string name="norm_score_ex">Score norm - for ex. 510</string>
    <string name="others">Others</string>
    <string name="personal_information">Personal information</string>
    <string name="pick_correct_file">Choose a correct file!</string>
    <string name="player_bowling_alley">Player\'s bowling alley</string>
    <string name="player_default">Default Player</string>
    <string name="player_full_name">Player\'s full name</string>
    <string name="player_team">Player\'s team</string>
    <string name="remarks">Here you can add remarks.</string>
    <string name="return_">Return</string>
    <string name="rey">Rey</string>
    <string name="rey_for">For useful remarks about app design</string>
    <string name="save">Save</string>
    <string name="score">Score:</string>
    <string name="score_collected">Collected:</string>
    <string name="score_collected_m">Collected</string>
    <string name="score_full">Full:</string>
    <string name="score_full_m">Full</string>
    <string name="score_lm">Scores</string>
    <string name="score_m">Score</string>
    <string name="score_misses">Misses:</string>
    <string name="score_misses_m">Misses</string>
    <string name="score_total">Total score:</string>
    <string name="scores_all">All scores</string>
    <string name="season">Season</string>
    <string name="season_include">Include only current season</string>
    <string name="season_start">1st of August is considered as beginning of the season</string>
    <string name="settings_lm">Settings</string>
    <string name="sort_date_ascending">Sort date ascending</string>
    <string name="sort_date_descending">Sort date descending</string>
    <string name="sort_score_ascending">Sort score ascending</string>
    <string name="sort_score_descending">Sort score descending</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_lm">Statistics</string>
    <string name="tables">Tables</string>
    <string name="team">Team</string>
    <string name="team_default">Set Team In Options</string>
    <string name="tools_lm">Tools</string>
    <string name="tournaments_above_average">Scores above norm:</string>
    <string name="with_thanks">With thanks to:</string>
    <string name="worst_score">Worst score:</string>
    <string name="yes">Yes</string>
    <string name="fb_url"><a href="http://fb.me/niezbednik.kreglarza">FB - Bowler\'s Essentials</a></string>
    <string name="maciej_kaszkowiak">Maciej Kaszkowiak</string>
    <string name="mail_url"><a href="mailto:maciej.kaszkowiak@gmail.com">Email - maciej.kaszkowiak@gmail.com</a></string>
    <string name="version_name">v1.1.1</string>
    <string name="easter_egg_filler">Robots!</string>
    <string name="anim_duration">300</string>
    <string name="tournaments">Tournaments</string>
    <string name="participated">\"Participated: \"</string>
    <string name="participants_d">players</string>
    <string name="brak_turniejow">Currently there are no tournaments. In order to add, press the button in lower right corner.</string>
    <string name="string_elementarka">Currently there are no scores matching this tournament. After adding them, they\'ll automatically appear there.</string>
    <string name="tournament_pending">Tournament in progress</string>
    <string name="tournament_happened">"Tournament took place: "</string>
    <string name="days_ago">days ago</string>
    <string name="tournament_in">"Tournament will take place in: "</string>
    <string name="days">days</string>
    <string name="total">"Total: "</string>
    <string name="beginning">Beginning</string>
    <string name="end">End</string>


    <string-array name="kluby">
        <item>KK Dziewiątka-Amica Wronki</item>
        <item>KK Polonia 1912 Leszno</item>
        <item>KK Wrzos Sieraków</item>
        <item>KS Zatoka Puck</item>
        <item>KS Polonia Łaziska Górne</item>
        <item>KS Start Gostyń</item>
        <item>KS Pilica Tomaszów Mazowiecki</item>
        <item>KS Czarna Kula Poznań</item>
        <item>OSiR Vector Tarnowo Podgórne</item>
        <item>Alfa Vector Tarnowo Podgórne</item>
        <item>BOSiR Brzesko</item>
        <item>MLKS Tucholanka Tuchola</item>
        <item>TPK Wejherowo</item>
        <item>TKKF Sokół Śrem</item>
        <item>TKKF Pleszew</item>
        <item>TKKF Dębinki</item>
        <item>TJ Sokol Husovice</item>
        <item>SKK Primátor Náchod</item>
        <item>Klokani CB Dobřany</item>
        <item>KK PSJ Jihlava</item>
        <item>TJ Sokol Luhačovice</item>
        <item>KK Slavoj Praha</item>
        <item>SKK Rokycany</item>
        <item>KK Inter Bratislava</item>
        <item>ŽP Šport Podbrezová</item>
        <item>KK Tatran Sučany</item>
        <item>ŠKK Trstená</item>
        <item>TJ Slavoj Veľký Šariš</item>
        <item>ŠK Modranka</item>
        <item>SKV Rot-Weiß Zerbst \'99</item>
        <item>SKC Victoria Bamberg</item>
        <item>SKC Staffelstein</item>
        <item>Aufwärts Donauperle Straubing</item>
        <item>KRC Kipfenberg</item>
        <item>TSV Breitengüßbach</item>
        <item>FSV Erlangen Bruck</item>
        <item>SKC Nibelungen Lorsch</item>
        <item>KC Schwabsberg</item>
        <item>ESV Lok Rudolstadt</item>
    </string-array>

    <string-array name="kregielnie">
        <item>Kręgielnia Dziewiątka-Amica Wronki</item>
        <item>Kręgielnia Vector Tarnowo Podgórne</item>
        <item>Kręgielnia Polonia 1912 Leszno</item>
        <item>Kręgielnia KS Czarna Kula Poznań</item>
        <item>Kręgielnia TKKF Sokół Śrem</item>
        <item>Kręgielnia TKKF Pleszew</item>
        <item>Kręgielnia TKKF Dębinki</item>
        <item>Kręgielnia OSiRu w Gostyniu</item>
        <item>Kręgielnia OSiRu w Tucholi</item>
        <item>Kręgielnia OSiRu w Sierakowie</item>
        <item>Kręgielnia OSiRu w Tomaszowie Mazowieckim</item>
        <item>Kręgielnia BOSiRu w Brzesku</item>
        <item>Kręgielnia MOSiRu w Łaziskach Górnych</item>
        <item>Kręgielnia MOKSiRu w Pucku</item>
        <item>Kręgielnia SKK Náchod</item>
        <item>Kręgielnia TJ Sokol Husovice</item>
        <item>Kręgielnia Klokani CB Dobřany</item>
        <item>Kręgielnia KK PSJ Jihlava</item>
        <item>Kręgielnia TJ Sokol Luhačovice</item>
        <item>Kręgielnia KK Slavoj Praha</item>
        <item>Kręgielnia SKK Rokycany</item>
        <item>Kręgielnia KK Inter Bratislava</item>
        <item>Kręgielnia KK Tatran Sučany</item>
        <item>Kręgielnia TJ Slavoj Veľký Šariš</item>
        <item>Kręgielnia ŠK Modranka</item>
        <item>Kręgielnia ŽP Šport Podbrezová</item>
        <item>Kręgielnia ŠKK Trstená</item>
        <item>Kręgielnia SKV Rot-Weiß Zerbst \'99</item>
        <item>Kręgielnia SKC Victoria Bamberg</item>
        <item>Kręgielnia SKC Staffelstein</item>
        <item>Kręgielnia Aufwärts Donauperle Straubing</item>
        <item>Kręgielnia KRC Kipfenberg</item>
        <item>Kręgielnia TSV Breitengüßbach</item>
        <item>Kręgielnia FSV Erlangen Bruck</item>
        <item>Kręgielnia SKC Nibelungen Lorsch</item>
        <item>Kręgielnia KC Schwabsberg</item>
        <item>Kręgielnia ESV Lok Rudolstadt</item>
    </string-array>

    <string-array name="kategorie">
        <item>Chłopcy - U10 M</item>
        <item>Dziewczynki - U10 W</item>
        <item>Młodzicy - U14 M</item>
        <item>Młodziczki - U14 W</item>
        <item>Juniorzy młodsi - U18 M</item>
        <item>Juniorki młodsze - U18 W</item>
        <item>Juniorzy - U23 M</item>
        <item>Juniorki - U23 W</item>
        <item>Seniorzy - M</item>
        <item>Seniorki - W</item>
    </string-array>
    <string name="tournament_name">Tournament name</string>
    <string name="age_group">Age group</string>
    <string name="age_group_player">Player\'s age group</string>
</resources>
