<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/easter_egg_filler"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <group android:visible="true">
        <item
            android:title="@string/sort_score_ascending"
            android:id="@+id/action_wynik" />
        <item
            android:title="@string/sort_score_descending"
            android:id="@+id/action_wynik2" />
        <item
            android:title="@string/sort_date_ascending"
            android:id="@+id/action_data" />
        <item
            android:title="@string/sort_date_descending"
            android:id="@+id/action_data2" />
    </group>
    <item
        android:title="@string/debug_random"
        android:id="@+id/action_losowe" />
    <item
        android:title="@string/debug_delete_scores"
        android:id="@+id/action_usun" />
</menu>
