<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:id="@+id/zaddLinear">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/zaddNazwa"
                android:hint="@string/tournament_name"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:background="@android:drawable/editbox_background"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="20dp"
                android:maxLines="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zaddKregielnia"
                android:spinnerMode="dialog"
                android:minHeight="50dp"
                android:background="@color/cardview_light_background"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <Button
                    android:text="@string/beginning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/zaddPoczatek"
                    android:layout_weight="1"
                    android:textSize="14sp" />

                <Button
                    android:text="@string/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/zaddKoniec"
                    android:layout_weight="1"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zaddZapisz"
            android:layout_below="@+id/zaddLinear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp" />
    </RelativeLayout>


</ScrollView>