<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorBg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:padding="8dp">

            <TextView
                android:text="@string/backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif"
                android:textSize="30sp"
                android:textAlignment="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <Button
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nrzZapisz"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp" />

                <Button
                    android:text="@string/load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nrzWczytaj"
                    android:textAlignment="center"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>